--- a/practica_prueba.html
+++ b/practica_prueba.html
@@ -42,7 +42,7 @@
 
     <div class="descripcion" id="informacion">
         <div class="text-medium">
-        <h2> okeokeokeokeokeokeoke</h2>
+        <h2> Amo a mi hermanita María</h2>
         </div>
     </div>
 
